--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "nano-redis",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Redis Adapter for nanoSQL https://nanosql.io",
   "main": "index.js",
   "typings": "index.d.ts",
   "scripts": {
+    "test": "tsc test.ts && node test.js && rm -rf *.js",
     "build": "rm -rf *.js && rm -rf *.d.ts && tsc && mv source.js index.js && mv source.d.ts index.d.ts"
   },
   "repository": {
@@ -31,6 +32,7 @@
   },
   "homepage": "https://nanosql.io",
   "dependencies": {
+    "NanoSQL-Adapter-Test": "git+https://github.com/ClickSimply/NanoSQL-Adapter-Test.git",
     "nano-sql": "^1.3.3",
     "redis": "^2.8.0"
   },
